# igorfiles

./: .gitignore  README.md  config.example.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_linux.sh  run_windows.bat
.github/workflows/: windows-installer.yml
app/: __init__.py  __main__.py  auth.py  client_page.py  config.py  desktop.py  diagnostics.py  iam.py  local_server.py  main.py  models.py  object_key.py  operator_config.py  secure_config.py  storage.py  upload_temp.py  upload_tokens.py
app/static/: app.js  index.html  styles.css
installer/: windows.iss
tests/: test_api.py  test_auth.py  test_config.py  test_iam.py  test_local_server.py  test_object_key.py  test_operator_config.py  test_storage.py  test_upload_temp.py  test_upload_tokens.py
