[project]
name = "yandex-storage-file-manager"
version = "0.4.2"
description = "Локальный файловый менеджер для безопасной загрузки в Yandex Object Storage"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "cryptography>=42.0",
    "fastapi>=0.110",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
